tidy up quick_checks

--- a/quick_checks.ipynb
+++ b/quick_checks.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "7c2b2142-ea4c-4951-af48-cb403440df56",
-   "metadata": {},
-   "source": [
-    "# Quick exploratory checks on data access"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a7b03920-dae3-4dbf-b448-28855cea061d",
@@ -25,35 +17,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c2b2142-ea4c-4951-af48-cb403440df56",
+   "metadata": {},
+   "source": [
+    "# Quick exploratory checks on data access\n",
+    "\n",
+    "In this little tutorial, we'll walk through an example of how you might load data from the Ocean Observatories Initiative (OOI). In particular we'll focus on data from a broadband hydrophone that's part of the seismic instrumentation package at Axial Seamount. \n",
+    "\n",
+    "*note: if you'd like to follow along you'll need to request access to [OOI-JupyterHub](https://jupyter.oceanobservatories.org/)*\n",
+    "\n",
+    "## Find a file \n",
+    "\n",
+    "The specific instrument I chose is \"RS03AXBS-LJ03A-09-HYDBBA302\". Let me break that down:\n",
+    "\n",
+    "- RS means Regional Scale Nodes - a cabled observatory off Oregon\n",
+    "- 03 a numerical identifier for the node\n",
+    "- AXBS - Axial Base Seafloor instrument\n",
+    "- LJ03A - Low-power JBox\n",
+    "- HYDBBA - broadband hydrophone\n",
+    "\n",
+    "Note that the broadband hydrophone files are in \"miniseed\" format, which is generally used to store seismic data. There's a great library for parsing these, called obspy - https://docs.obspy.org/. \n",
+    "\n",
+    "In the next cell, I've provided the path to just one single 5-minute file. I didn't entirely pick this at random - it's from January, which I know is a good bet if you're trying to see some fin whale calls in the NE Pacific."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "992a529d-033f-4c55-aea5-4155859763e3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# file = \"../../ooi/san_data/RS03AXBS-LJ03A-09-HYDBBA302/2024/04/05/OO-AXVM1--YDH-2024-04-05T15:40:00.000000Z.mseed\"\n",
-    "\n",
-    "file = \"../../ooi/san_data/RS03AXBS-LJ03A-09-HYDBBA302/2024/01/05/OO-AXVM1--YDH-2024-01-05T02:30:00.000000Z.mseed\"\n"
+    "file = \"../../ooi/san_data/RS03AXBS-LJ03A-09-HYDBBA302/2024/01/05/\" + \\\n",
+    "       \"OO-AXVM1--YDH-2024-01-05T02:30:00.000000Z.mseed\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "de935773-0393-4d2e-b695-1e44d8fbffab",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Read in the miniseed file as a data stream\n",
+    "# Read in the miniseed file as a data stream (using Obspy)\n",
     "stream = read(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "4ba9bb1b-4a38-4a1e-be6c-8e4e66f46814",
    "metadata": {
     "tags": []
@@ -73,7 +90,7 @@
        "[Use \"print(Stream.__str__(extended=True))\" to print all Traces]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,32 +101,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "33f60823-e261-49e7-aefe-2f9860fcb526",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Extract the sample rate from the first trace (assume all traces have the same sample rate)\n",
-    "fs = stream[0].stats[\"sampling_rate\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "54b18bd2-361b-46f0-82aa-2ec598ba564c",
+   "id": "77cef03b-ad20-41bb-ab04-633dd2050e43",
    "metadata": {},
    "source": [
-    "## Decimate and merge\n",
+    "## Decimation, and more decimation\n",
     "\n",
-    "The stream has 1201 traces in it, collected at a sample rate of 64000 samples per second (64 kHz). The maximum decimation factor obspy will let us use is 16, so we'll do that and reduce the resulting time series to a sample rate of 4000 samples per second (4 kHz). "
+    "I decimated this data so that it has an effective sample rate of 400 Hz. This is more than enough for the 20Hz fin whale calls - Nyquist says we'll be able to resolve signal components up to 200 Hz."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8fd0b312-ad79-4cb8-9f75-7670e5d73bf2",
+   "execution_count": 14,
+   "id": "fdfca61a-ba36-4ee6-8770-f80529af81ec",
    "metadata": {
     "tags": []
    },
@@ -117,25 +121,25 @@
     {
      "data": {
       "text/plain": [
-       "1 Trace(s) in Stream:\n",
-       "OO.AXVM1..YDH | 2024-04-05T15:40:00.000000Z - 2024-04-05T15:44:59.999750Z | 4000.0 Hz, 1200000 samples (masked)"
+       "array([ 0.00000000e+00, -6.19434583e-01, -1.24777904e+01, ...,\n",
+       "       -2.66484452e+02,  1.62062147e+02,  8.08964345e+02])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Decimate by a factor of 16, merge all the traces.\n",
-    "# data_all = stream.split().decimate(16).merge()\n",
-    "# data_all"
+    "dat0 = stream.detrend().split().decimate(16).merge(method=1, fill_value=\"interpolate\").decimate(10)\n",
+    "dat = dat0[0].data\n",
+    "dat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "71eb9811-6ad0-4375-8dc8-ed72b9f3a09c",
+   "execution_count": 23,
+   "id": "093bfd41-96e6-4587-86cc-f312582bc643",
    "metadata": {
     "tags": []
    },
@@ -143,64 +147,15 @@
     {
      "data": {
       "text/plain": [
-       "1 Trace(s) in Stream:\n",
-       "OO.AXVM1..YDH | 2024-01-05T02:30:00.000000Z - 2024-01-05T02:34:59.999750Z | 4000.0 Hz, 1200000 samples"
+       "400.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "test = stream.detrend().split().decimate(16).merge(method=1, fill_value=\"interpolate\")\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "058e57b0-f13a-4ff9-aa79-04dd46bae3be",
-   "metadata": {},
-   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "55b66344-b51a-40e4-ab1f-f68a3e12c4c5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1 Trace(s) in Stream:\n",
-       "OO.AXVM1..YDH | 2024-04-05T15:40:00.000000Z - 2024-04-05T15:44:59.997500Z | 400.0 Hz, 120000 samples"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test2 = test.decimate(10)\n",
-    "test2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "9074afb5-6505-4250-bce6-2a2024ae15d6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "dat = stream.detrend().split().decimate(16).merge(method=1, fill_value=\"interpolate\").decimate(10)[0].data\n"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -212,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "id": "f79b3545-a652-4f32-b6a3-c9750423bc84",
    "metadata": {},
    "outputs": [],
@@ -236,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "id": "ffdc8d80-b5bf-45c2-ab4f-9f22b1144253",
    "metadata": {
     "tags": []
@@ -265,7 +220,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b52e03-ccc3-4ba7-8acc-cbb5b0ca8c99",
+   "id": "abb7d1be-413f-41b2-ab39-05edec0c3782",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c08a95d-b3bc-4a61-84ff-ff3f21f0645b",
    "metadata": {},
    "outputs": [],
    "source": []
