added link to OOI data explorer

--- a/quick_checks.ipynb
+++ b/quick_checks.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "# Quick exploratory checks on data access\n",
     "\n",
-    "In this Jupyter notebook, we'll walk through an example of how you might load data from the Ocean Observatories Initiative (OOI). In particular we'll focus on data from a broadband hydrophone that's part of the seismic instrumentation package at Axial Seamount. \n",
+    "In this Jupyter notebook, we'll walk through an example of how you might load data from the Ocean Observatories Initiative (OOI). In particular we'll focus on data from a broadband hydrophone that's part of the seismic instrumentation package at Axial Seamount. (If you'd like to explore other OOI instruments, visit [https://dataexplorer.oceanobservatories.org/](https://dataexplorer.oceanobservatories.org/))\n",
     "\n",
     "Note that the broadband hydrophone files are in \"miniseed\" format (*.mseed), which is generally used to store seismic data. There's a great library for parsing these, called obspy - https://docs.obspy.org/. \n",
     "\n",
