added notebook to generate daily netcdf files, for one month at a time

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "d9363945-52fc-479e-af41-c35ff2eb54cb",
    "metadata": {
     "tags": []
@@ -21,7 +21,9 @@
    "source": [
     "import compile_mseed_day as md\n",
     "import time\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import xarray as xr"
    ]
   },
   {
@@ -38,13 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2b8a1c7e-fa08-43ac-9a47-a6140d31528b",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -75,28 +73,6 @@
       "Segment 21 of 48\n",
       "Segment 22 of 48\n",
       "Segment 23 of 48\n",
-      "Segment 24 of 48\n",
-      "Segment 25 of 48\n",
-      "Segment 26 of 48\n",
-      "Segment 27 of 48\n",
-      "Segment 28 of 48\n",
-      "Segment 29 of 48\n",
-      "Segment 30 of 48\n",
-      "Segment 31 of 48\n",
-      "Segment 32 of 48\n",
-      "Segment 33 of 48\n",
-      "Segment 34 of 48\n",
-      "Segment 35 of 48\n",
-      "Segment 36 of 48\n",
-      "Segment 37 of 48\n",
-      "Segment 38 of 48\n",
-      "Segment 39 of 48\n",
-      "Segment 40 of 48\n",
-      "Segment 41 of 48\n",
-      "Segment 42 of 48\n",
-      "Segment 43 of 48\n",
-      "Segment 44 of 48\n",
-      "Segment 45 of 48\n",
       "Segment 46 of 48\n",
       "Segment 47 of 48\n",
       "Segment 48 of 48\n"
@@ -105,10 +81,10 @@
     {
      "data": {
       "text/plain": [
-       "244.0396285057068"
+       "218.3156032562256"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "76fa7a82-e1c9-4690-9be9-0d1ae5cca014",
    "metadata": {
     "tags": []
@@ -521,7 +497,7 @@
        "Coordinates:\n",
        "  * frequency  (frequency) float64 808B 0.0 2.0 4.0 6.0 ... 196.0 198.0 200.0\n",
        "  * seconds    (seconds) float64 6kB 0.25 0.675 1.1 1.525 ... 298.6 299.0 299.4\n",
-       "  * time       (time) datetime64[ns] 2kB 2024-01-01 ... 2024-01-01T23:55:00</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 288</li><li><span class='xr-has-index'>frequency</span>: 101</li><li><span class='xr-has-index'>seconds</span>: 705</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-3be4a9f9-db39-4c5b-9e28-b4f44720b749' class='xr-array-in' type='checkbox' checked><label for='section-3be4a9f9-db39-4c5b-9e28-b4f44720b749' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>dask.array&lt;chunksize=(1, 50, 50), meta=np.ndarray&gt;</span></div><div class='xr-array-data'><table>\n",
+       "  * time       (time) datetime64[ns] 2kB 2024-01-01 ... 2024-01-01T23:55:00</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 288</li><li><span class='xr-has-index'>frequency</span>: 101</li><li><span class='xr-has-index'>seconds</span>: 705</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-7615642c-0879-40c2-a8d6-6488fb047cd1' class='xr-array-in' type='checkbox' checked><label for='section-7615642c-0879-40c2-a8d6-6488fb047cd1' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>dask.array&lt;chunksize=(1, 50, 50), meta=np.ndarray&gt;</span></div><div class='xr-array-data'><table>\n",
        "    <tr>\n",
        "        <td>\n",
        "            <table style=\"border-collapse: collapse;\">\n",
@@ -667,7 +643,7 @@
        "</svg>\n",
        "        </td>\n",
        "    </tr>\n",
-       "</table></div></div></li><li class='xr-section-item'><input id='section-7657ae53-9cb6-492b-bd12-32b382f0ddc6' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7657ae53-9cb6-492b-bd12-32b382f0ddc6' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>frequency</span></div><div class='xr-var-dims'>(frequency)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 2.0 4.0 ... 196.0 198.0 200.0</div><input id='attrs-cf9e2490-85f9-4d1c-a806-879038e436b4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-cf9e2490-85f9-4d1c-a806-879038e436b4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c135a4ca-471f-4f52-8709-de7c7cefb8f7' class='xr-var-data-in' type='checkbox'><label for='data-c135a4ca-471f-4f52-8709-de7c7cefb8f7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([  0.,   2.,   4.,   6.,   8.,  10.,  12.,  14.,  16.,  18.,  20.,  22.,\n",
+       "</table></div></div></li><li class='xr-section-item'><input id='section-49875e24-fdbb-4465-8cf8-556b85e2feb9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-49875e24-fdbb-4465-8cf8-556b85e2feb9' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>frequency</span></div><div class='xr-var-dims'>(frequency)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 2.0 4.0 ... 196.0 198.0 200.0</div><input id='attrs-0bea7e73-265e-4e4b-8ea2-34e8a89b726a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0bea7e73-265e-4e4b-8ea2-34e8a89b726a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a7862d2f-903e-4f15-99d5-6c5685a36e11' class='xr-var-data-in' type='checkbox'><label for='data-a7862d2f-903e-4f15-99d5-6c5685a36e11' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([  0.,   2.,   4.,   6.,   8.,  10.,  12.,  14.,  16.,  18.,  20.,  22.,\n",
        "        24.,  26.,  28.,  30.,  32.,  34.,  36.,  38.,  40.,  42.,  44.,  46.,\n",
        "        48.,  50.,  52.,  54.,  56.,  58.,  60.,  62.,  64.,  66.,  68.,  70.,\n",
        "        72.,  74.,  76.,  78.,  80.,  82.,  84.,  86.,  88.,  90.,  92.,  94.,\n",
@@ -675,19 +651,19 @@
        "       120., 122., 124., 126., 128., 130., 132., 134., 136., 138., 140., 142.,\n",
        "       144., 146., 148., 150., 152., 154., 156., 158., 160., 162., 164., 166.,\n",
        "       168., 170., 172., 174., 176., 178., 180., 182., 184., 186., 188., 190.,\n",
-       "       192., 194., 196., 198., 200.])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>seconds</span></div><div class='xr-var-dims'>(seconds)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.25 0.675 1.1 ... 299.0 299.4</div><input id='attrs-ceef4071-080f-4da5-9cde-8037442bafbb' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ceef4071-080f-4da5-9cde-8037442bafbb' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e25a7595-600d-4162-8340-016c83368594' class='xr-var-data-in' type='checkbox'><label for='data-e25a7595-600d-4162-8340-016c83368594' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([2.50000e-01, 6.75000e-01, 1.10000e+00, ..., 2.98600e+02, 2.99025e+02,\n",
-       "       2.99450e+02])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2024-01-01 ... 2024-01-01T23:55:00</div><input id='attrs-51fbef7f-dfb2-4cbc-b76d-11aac303269b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-51fbef7f-dfb2-4cbc-b76d-11aac303269b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c801b22d-452d-4d5d-81b4-292b874a6aad' class='xr-var-data-in' type='checkbox'><label for='data-c801b22d-452d-4d5d-81b4-292b874a6aad' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2024-01-01T00:00:00.000000000&#x27;, &#x27;2024-01-01T00:05:00.000000000&#x27;,\n",
+       "       192., 194., 196., 198., 200.])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>seconds</span></div><div class='xr-var-dims'>(seconds)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.25 0.675 1.1 ... 299.0 299.4</div><input id='attrs-3c6dcc35-e4da-445b-849e-9631a7228f57' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3c6dcc35-e4da-445b-849e-9631a7228f57' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-034fe5d2-7baf-42b7-95b8-66b277caf9fe' class='xr-var-data-in' type='checkbox'><label for='data-034fe5d2-7baf-42b7-95b8-66b277caf9fe' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([2.50000e-01, 6.75000e-01, 1.10000e+00, ..., 2.98600e+02, 2.99025e+02,\n",
+       "       2.99450e+02])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2024-01-01 ... 2024-01-01T23:55:00</div><input id='attrs-07e1608f-21d7-4524-bfb8-2eefefada7d3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-07e1608f-21d7-4524-bfb8-2eefefada7d3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e323f03f-c5e0-45ce-b7b1-938183c438e9' class='xr-var-data-in' type='checkbox'><label for='data-e323f03f-c5e0-45ce-b7b1-938183c438e9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2024-01-01T00:00:00.000000000&#x27;, &#x27;2024-01-01T00:05:00.000000000&#x27;,\n",
        "       &#x27;2024-01-01T00:10:00.000000000&#x27;, ..., &#x27;2024-01-01T23:45:00.000000000&#x27;,\n",
        "       &#x27;2024-01-01T23:50:00.000000000&#x27;, &#x27;2024-01-01T23:55:00.000000000&#x27;],\n",
-       "      dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7edd918d-2289-4fd2-ab8c-80d18602ceaa' class='xr-section-summary-in' type='checkbox'  ><label for='section-7edd918d-2289-4fd2-ab8c-80d18602ceaa' class='xr-section-summary' >Indexes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>frequency</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-472b479f-5b7d-4225-894e-fc0dd2dbce41' class='xr-index-data-in' type='checkbox'/><label for='index-472b479f-5b7d-4225-894e-fc0dd2dbce41' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([  0.0,   2.0,   4.0,   6.0,   8.0,  10.0,  12.0,  14.0,  16.0,  18.0,\n",
+       "      dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-68498ed8-157e-448f-8e43-19aeb2e8f881' class='xr-section-summary-in' type='checkbox'  ><label for='section-68498ed8-157e-448f-8e43-19aeb2e8f881' class='xr-section-summary' >Indexes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>frequency</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-dda58175-ab3f-4225-a4e2-d27248a5d1c7' class='xr-index-data-in' type='checkbox'/><label for='index-dda58175-ab3f-4225-a4e2-d27248a5d1c7' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([  0.0,   2.0,   4.0,   6.0,   8.0,  10.0,  12.0,  14.0,  16.0,  18.0,\n",
        "       ...\n",
        "       182.0, 184.0, 186.0, 188.0, 190.0, 192.0, 194.0, 196.0, 198.0, 200.0],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;frequency&#x27;, length=101))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>seconds</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-fb37b69a-ac06-4bb8-938d-4d5b32427815' class='xr-index-data-in' type='checkbox'/><label for='index-fb37b69a-ac06-4bb8-938d-4d5b32427815' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([   0.25,   0.675,     1.1,   1.525,    1.95,   2.375,     2.8,   3.225,\n",
+       "      dtype=&#x27;float64&#x27;, name=&#x27;frequency&#x27;, length=101))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>seconds</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-f9bc5059-598d-4f37-b29f-3333f35a3326' class='xr-index-data-in' type='checkbox'/><label for='index-f9bc5059-598d-4f37-b29f-3333f35a3326' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([   0.25,   0.675,     1.1,   1.525,    1.95,   2.375,     2.8,   3.225,\n",
        "          3.65,   4.075,\n",
        "       ...\n",
        "       295.625,  296.05, 296.475,   296.9, 297.325,  297.75, 298.175,   298.6,\n",
        "       299.025,  299.45],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;seconds&#x27;, length=705))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-18084c91-5c6a-4b8b-a6db-6d54fd3c7f3b' class='xr-index-data-in' type='checkbox'/><label for='index-18084c91-5c6a-4b8b-a6db-6d54fd3c7f3b' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2024-01-01 00:00:00&#x27;, &#x27;2024-01-01 00:05:00&#x27;,\n",
+       "      dtype=&#x27;float64&#x27;, name=&#x27;seconds&#x27;, length=705))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-812bae34-1bc7-41bc-879c-c7deccd168f4' class='xr-index-data-in' type='checkbox'/><label for='index-812bae34-1bc7-41bc-879c-c7deccd168f4' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2024-01-01 00:00:00&#x27;, &#x27;2024-01-01 00:05:00&#x27;,\n",
        "               &#x27;2024-01-01 00:10:00&#x27;, &#x27;2024-01-01 00:15:00&#x27;,\n",
        "               &#x27;2024-01-01 00:20:00&#x27;, &#x27;2024-01-01 00:25:00&#x27;,\n",
        "               &#x27;2024-01-01 00:30:00&#x27;, &#x27;2024-01-01 00:35:00&#x27;,\n",
@@ -698,7 +674,7 @@
        "               &#x27;2024-01-01 23:30:00&#x27;, &#x27;2024-01-01 23:35:00&#x27;,\n",
        "               &#x27;2024-01-01 23:40:00&#x27;, &#x27;2024-01-01 23:45:00&#x27;,\n",
        "               &#x27;2024-01-01 23:50:00&#x27;, &#x27;2024-01-01 23:55:00&#x27;],\n",
-       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, length=288, freq=None))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-55f068ef-d333-4cbc-acbf-345b574e2f0b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-55f068ef-d333-4cbc-acbf-345b574e2f0b' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, length=288, freq=None))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e673d9e4-ee4e-40c6-a744-90285317b38d' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e673d9e4-ee4e-40c6-a744-90285317b38d' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (time: 288, frequency: 101, seconds: 705)> Size: 164MB\n",
@@ -709,7 +685,7 @@
        "  * time       (time) datetime64[ns] 2kB 2024-01-01 ... 2024-01-01T23:55:00"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "d86fd176-8b0b-43c3-aee3-7f5dab8c1075",
    "metadata": {
     "tags": []
@@ -762,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1047b46-d6d3-41b8-b6ec-b0647ea15449",
+   "id": "aea61f66-fba9-46f1-8355-447d404d6d55",
    "metadata": {},
    "outputs": [],
    "source": []
