Refactoring/improvements to the mseed functions

--- a/monthly_data_prep.ipynb
+++ b/monthly_data_prep.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "0e6b2b39-e796-4ea1-9792-801653c63975",
    "metadata": {
     "tags": []
@@ -23,6 +23,34 @@
     "import numpy as np\n",
     "import xarray as xr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4318e9fd-d836-4c8c-8eb2-a33d6ffc2a5a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Set instrument, year, and month\n",
+    "instrument = \"RS03AXBS-LJ03A-09-HYDBBA302\"\n",
+    "year = 2024\n",
+    "month = 1\n",
+    "days = np.arange(1,32)\n",
+    "\n",
+    "month_quantile = []\n",
+    "day = days[0]\n",
+    "spec_xa = md.mseed_to_xarray(instrument, year, month, day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2ae5eb4-147a-4a39-b9b5-e347d1e8f2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
