--- a/notebooks/quick_checks.ipynb
+++ b/notebooks/quick_checks.ipynb
@@ -50,20 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "992a529d-033f-4c55-aea5-4155859763e3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "file = \"../../ooi/san_data/RS03AXBS-LJ03A-09-HYDBBA302/2024/01/05/\" + \\\n",
+    "file = \"../../../ooi/san_data/RS03AXBS-LJ03A-09-HYDBBA302/2024/01/05/\" + \\\n",
     "       \"OO-AXVM1--YDH-2024-01-05T02:30:00.000000Z.mseed\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "de935773-0393-4d2e-b695-1e44d8fbffab",
    "metadata": {
     "tags": []
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "4ba9bb1b-4a38-4a1e-be6c-8e4e66f46814",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
        "[Use \"print(Stream.__str__(extended=True))\" to print all Traces]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "fdfca61a-ba36-4ee6-8770-f80529af81ec",
    "metadata": {
     "tags": []
@@ -131,7 +131,7 @@
        "       -2.66484452e+02,  1.62062147e+02,  8.08964345e+02])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,6 +140,56 @@
     "dat0 = stream.detrend().split().decimate(16).merge(method=1, fill_value=\"interpolate\").decimate(10)\n",
     "dat = dat0[0].data\n",
     "dat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ff14e672-eb82-4615-9baf-8b6b0a2fade0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1 Trace(s) in Stream:\n",
+       "OO.AXVM1..YDH | 2024-01-05T02:30:00.000000Z - 2024-01-05T02:34:59.999984Z | 64000.0 Hz, 19200000 samples"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ce55782f-9be6-4520-8703-17112cf569ee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0.        ,  123.96674393, -101.06651215, ..., 1413.19085321,\n",
+       "        736.09542661,    0.        ])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat0 = stream.detrend().split().merge(method=1, fill_value=\"interpolate\")\n",
+    "dat2 = dat0[0].data\n",
+    "dat2"
    ]
   },
   {
