Fixed an error in monthly_data_prep
was previously not incrementing correctly in the quantile calculation loop

--- a/explore_monthly_data.ipynb
+++ b/explore_monthly_data.ipynb
@@ -864,7 +864,8 @@
     }
    ],
    "source": [
-    "sample"
+    "ds = xr.open_dataarray('data.nc')\n",
+    "sample = ds.isel(time=120)"
    ]
   },
   {
